--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -16,3 +16,38 @@
   year={2011},
   publisher={Elsevier}
 }
+
+@article{Aine2017,
+author="Aine, C. J.
+and Bockholt, H. J.
+and Bustillo, J. R.
+and Ca{\~{n}}ive, J. M.
+and Caprihan, A.
+and Gasparovic, C.
+and Hanlon, F. M.
+and Houck, J. M.
+and Jung, R. E.
+and Lauriello, J.
+and Liu, J.
+and Mayer, A. R.
+and Perrone-Bizzozero, N. I.
+and Posse, S.
+and Stephen, J. M.
+and Turner, J. A.
+and Clark, V. P.
+and Calhoun, Vince D.",
+title="Multimodal Neuroimaging in Schizophrenia: Description and Dissemination",
+journal="Neuroinformatics",
+year="2017",
+month="Oct",
+day="01",
+volume="15",
+number="4",
+pages="343--364",
+abstract="In this paper we describe an open-access collection of multimodal neuroimaging data in schizophrenia for release to the community. Data were acquired from approximately 100 patients with schizophrenia and 100 age-matched controls during rest as well as several task activation paradigms targeting a hierarchy of cognitive constructs. Neuroimaging data include structural MRI, functional MRI, diffusion MRI, MR spectroscopic imaging, and magnetoencephalography. For three of the hypothesis-driven projects, task activation paradigms were acquired on subsets of {\textasciitilde}200 volunteers which examined a range of sensory and cognitive processes (e.g., auditory sensory gating, auditory/visual multisensory integration, visual transverse patterning). Neuropsychological data were also acquired and genetic material via saliva samples were collected from most of the participants and have been typed for both genome-wide polymorphism data as well as genome-wide methylation data. Some results are also presented from the individual studies as well as from our data-driven multimodal analyses (e.g., multimodal examinations of network structure and network dynamics and multitask fMRI data analysis across projects). All data will be released through the Mind Research Network's collaborative informatics and neuroimaging suite (COINS).",
+issn="1559-0089",
+doi="10.1007/s12021-017-9338-9",
+url="https://doi.org/10.1007/s12021-017-9338-9"
+}
+
+
