--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -1,9 +1,9 @@
-@misc{relion2017network,
+@article{relion2017network,
   title={Network classification with applications to brain connectomics},
-  author={J.D. Arroyo-Reli{o}n and D. Kessler and E. Levina and S.F. Taylor},
-    journal={arXiv preprint arXiv:1701.08140},
-     howpublished={\url{https://arxiv.org/pdf/1708.07852.pdf}},
-    year={2017}
+  author={J.D. {Arroyo Reli{o}n} and D. Kessler and E. Levina and S.F. Taylor},
+    journal={Annals of Applied Statistics},
+    howpublished={\url{https://arxiv.org/pdf/1708.07852.pdf}},
+    year={to Appear}
   }
   
 @article{power2011functional,
