--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -1,10 +1,13 @@
 @article{relion2017network,
   title={Network classification with applications to brain connectomics},
-  author={J.D. {Arroyo Reli{o}n} and D. Kessler and E. Levina and S.F. Taylor},
-    journal={Annals of Applied Statistics},
-    howpublished={\url{https://arxiv.org/pdf/1708.07852.pdf}},
-    year={to Appear}
-  }
+  author={J.D. {Arroyo Relion} and D. Kessler and E. Levina and S.F. Taylor},
+  journal={Ann Appl Stat.},
+  volume={13},
+  number={3},
+  pages={1648},
+  year={2019},
+  publisher={NIH Public Access}
+}
   
 @article{power2011functional,
   title={Functional network organization of the human brain},
